--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -39,6 +39,14 @@ h6 {
     font-weight: 600;
 }
 
+.couple-text h2 {
+    font-family: $main-heading-font;
+}
+
+.couple-area h3 {
+    font-family: $main-heading-font;
+}
+
 ul {
     padding-left: 0;
     margin: 0;
