--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -2,6 +2,7 @@
 	Fonts
 ----------------------------*/
 @import url("https://fonts.googleapis.com/css?family=Muli:400,400i,600,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Mea+Culpa:400,400i,600,700,800&display=swap");
 
 @font-face {
   font-family: 'Futura PT';
@@ -35,6 +36,7 @@
 $base-font-size: 15;
 $base-font: 'Muli';
 $heading-font: 'Futura PT';
+$main-heading-font: 'Mea Culpa';
 
 
 
