--- a/src/sass/page/_home-style3.scss
+++ b/src/sass/page/_home-style3.scss
@@ -163,8 +163,8 @@
 		}
 
 		h3 {
-			font-size: 22px;
-			font-size: calc-rem-value(22);
+			font-size: 2rem;
+			// font-size: calc-rem-value(22);
 			margin: 0 0 0.8em;
 		}
 
@@ -291,7 +291,7 @@
 
 		&:after {
 			content: "";
-			background: #cee0ef;
+			background: #c5b17f;
 			width: 2px;
 			height: 100%;
 			position: absolute;
@@ -415,7 +415,7 @@
 		position: relative;
 
 		.horizontal-line {
-			background: transparentize($theme-primary-color, 0.9);
+			background: lighten($theme-primary-color-s2, 30%);
 			width: 70%;
 			height: 1px;
 			position: absolute;
@@ -472,7 +472,7 @@
 	.story-timeline .story-text {
         padding-left: 50px;
 		@include media-query(991px) {
-			background: transparentize($theme-primary-color, 0.95);
+			background: lighten($theme-primary-color-s2, 30%);
 			padding: 35px 25px;
             text-align: center;
 		}
@@ -482,7 +482,7 @@
         padding-left: 0px;
         padding-right: 50px;
         @include media-query(991px) {
-			background: transparentize($theme-primary-color, 0.95);
+			background: lighten($theme-primary-color-s2, 30%);
 			padding: 35px 25px;
             text-align: center;
 		}
@@ -511,7 +511,7 @@
 		}
 
 		.heart {
-			background-color: #e7eff6;
+			background-color: lighten($theme-primary-color-s2, 30%);
 			width: 43px;
 			height: 43px;
 			line-height: 41px;
@@ -562,7 +562,7 @@
 		font-weight: 500;
 		display: block;
 		margin-bottom: 15px;
-		color: #8ab1d2;
+		color: $theme-primary-color;
 	}
 
 	.story-timeline p{
@@ -717,13 +717,13 @@
   .wpo-event-wrap{
 	  .wpo-event-item{
 		  padding: 20px;
-		  border: 2px solid #b0c7d9;
+		  border: 2px solid $theme-primary-color-s2;
 		  position: relative;
 		  margin-bottom: 40px;
 		.wpo-event-text{
 			padding: 40px 35px;
 			text-align: center;
-			background: $section-bg-color;
+			background: lighten($theme-primary-color-s2, 20%);
 			@media(max-width:1200px){
 				padding: 25px 15px;
 			}
@@ -731,7 +731,7 @@
 			h2{
 				font-size: 25px;
 				text-transform: uppercase;
-				border-bottom: 1px solid #c4d8e4;
+				border-bottom: 1px solid $theme-primary-color-s2;
 				padding-bottom: 30px;
 				margin-bottom: 40px;
 			}
@@ -743,6 +743,8 @@
 					margin-bottom: 15px;
 					font-size: 18px;
 					line-height: 30px;
+					color: darken($theme-primary-color-s2, 20%);
+					font-family: 'Futura PT';
 
 					&:last-child{
 						margin-bottom: 0;
@@ -750,7 +752,7 @@
 
 					button{
 						font-weight: 700;
-						color: #8facc2;
+						color: darken($theme-primary-color-s2, 20%);
 						position: relative;
 						display: inline-block;
 						margin-top: 20px;
@@ -764,7 +766,7 @@
 							width: 100%;
 							height: 1px;
 							content: "";
-							background: #8facc2;
+							background: $theme-primary-color-s2;
 						}
 
 						&:focus{
